<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/recipe_image_container_height"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextColor="@color/white"
            app:expandedTitleTextColor ="@color/white"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/recipe_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recipe_image_height"
                android:contentDescription="Recipe image"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                tools:ignore="HardcodedText" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:navigationIcon="@drawable/arrow_back"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="Set/Unset recipe to/from fav"
        app:layout_anchor="@+id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_not_favorite"
        tools:ignore="HardcodedText" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/single_recipe_outer_linear_layout_padding"
            tools:ignore="UseCompoundDrawables">
            <LinearLayout
                android:id="@+id/ingredients_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/ingredients_height"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="@dimen/ingredients_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/purple_500"
                    android:text="@string/ingredients"
                    tools:text="Ingredients" />
                <ImageView
                    android:id="@+id/expanded_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/arrow_drop_down"
                    tools:ignore="ContentDescription" />
                <ImageView
                    android:id="@+id/collapsed_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:srcCompat="@drawable/arrow_drop_up"
                    tools:ignore="ContentDescription" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
        </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="@dimen/ingredients_recycler_view_marginTop"
                android:id="@+id/ingredients_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ingredients_recycler_view_height" />
        <LinearLayout
            android:id="@+id/steps_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/steps"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/how_to_cook_height"
                android:ellipsize="end"
                android:textColor="@color/purple_500"
                android:maxLines="1"
                android:textSize="@dimen/how_to_cook_text_size"
                android:textStyle="bold"
                android:text="@string/how_to_cook"
                tools:text="How to cook" />
            <ImageView
                android:id="@+id/expanded_steps"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/arrow_drop_down"
                tools:ignore="ContentDescription" />
           <ImageView
               android:id="@+id/collapsed_steps"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:visibility="gone"
               app:srcCompat="@drawable/arrow_drop_up"
               android:contentDescription="TODO" />
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="@dimen/how_to_cook_recycler_view_marginTop"
                android:id="@+id/steps_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="300dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
