...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/recipes_material_card_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:layout_constraintBottom_toTopOf="@+id/recipes_recycler_view"
            app:cardBackgroundColor="#7a87a4"
            app:cardCornerRadius="@dimen/recipes_material_card_corner_radius">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
...
